--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header class="hero">
     <div id="navbar" class="navbar ">
       <a href="">
-        <img src="./img/logo.png" alt="">
+        <img src="./img/Logo.png" alt="">
       </a>
       <nav>
         <ul class="nav-links">
