--- a/index.html
+++ b/index.html
@@ -256,8 +256,8 @@
   </section>
 
   <footer id="footer">
-    <p>Copyright ©2020 All rights reserved | made by <a href="https://www.mohamedessam.ml" target="_blank"> <b> <i
-            class="fas fa-user-circle"></i> Mohamed Essam </b></a></p>
+    <p>Copyright ©2020 All rights reserved | made by <a href="https://mohamedelkashef.com" target="_blank"> <b> <i
+            class="fas fa-user-circle"></i> Mohamed Elkashef </b></a></p>
   </footer>
 
   <a href="#" class="btn"><i class="fas fa-arrow-up"></i></a>
